--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Zeyada&display=swap');
+
 :root {
 	--primary: #fff;
 	/* --bg-color: rgb(5, 53, 61); */
@@ -71,10 +73,11 @@ body {
 }
 
 .envelope > .letter > .text {
-	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+	font-family: 'Gill Sans', 'Zeyada', 'Gill Sans MT', Calibri, 'Trebuchet MS',
+		sans-serif;
 	color: var(--txt-color);
 	text-align: left;
-	font-size: 10px;
+	font-size: 12px;
 }
 .heart {
 	position: absolute;
